worked more on intro

--- a/papers/Visual Diagnostics of a Model Explainer/visual-diagnostics-of-a-model-explainer.Rnw
+++ b/papers/Visual Diagnostics of a Model Explainer/visual-diagnostics-of-a-model-explainer.Rnw
@@ -43,11 +43,15 @@
 
 \section{Introduction}
 
-Machine learning models have been proven to provide accurate predictions in many areas of applications. Carriquiry et al. (2019) discuss the use of pattern recognition analyses in the forensics sciences to determine whether two bullets were fired from the same gun with the use of a random forest model. Yu, Beam, and Kohane (2018) describe how machine learning has advanced healthcare in ways such as automated medical image diagnoses with neural networks and predictions of clinical outcomes with Bayesian networks. This impressive predictive ability, however, comes at a cost.
+Machine learning models have been proven to provide accurate predictions in a wide range of problems. This impressive predictive performance, however, comes at a cost. These models are typically complex and lack a functional form, so the ability to directly interpret the models is lost. This has led machine learning models be referred to as black box models. In many areas of application, the need to be able to explain the results from a model is critical. As a result, an area of research on how to explain the output from machine learning algorithms has emerged.
 
-These models are typically complex and lack a functional form, so the ability to directly interpret the model is lost. As a result, machine learning models often get referred to as black boxes. In many areas of application, such as forensics science and healthcare, the need to be able to explain the results from the model is critical. For example, a machine learning model could be used to determine the probability that a shoe print found at the crime scene matches the shoe belonging to a suspect in the investigation. The model may return a high probability of a match, but without the ability to explain which factors in the model led to this high probability, it may be difficult for a jury to trust the results from the model when deciding whether to convict the suspect. (add sentence about Europe law) The need for interpretability has led to the desire to be able to explain the output from machine learning algorithms.
+The forensics sciences and the heath care industry are two areas that have benefitted from machine learning but have an obvious need for explainable predictions. For example, Carriquiry et al. (2019) discuss the use of a random forest model in the forensics sciences to determine whether two bullets were fired from the same gun. Yu, Beam, and Kohane (2018) describe how healthcare has advanced through the use of machine learning in various ways such as using neural networks to automate medical image diagnoses and implementing Bayesian networks to predict clinical outcomes. In all of these cases, the decisions made based on the results of the machine learning models can greatly impact the lives of human beings. If it is not possible to explain the output from a model, it becomes questionable whether the results from the model can be trusted to make important decisions.
 
-One approach to remedy this problem is to develop a model explainer that can provide insight into the performance of the complex model. A model explainer is a method that is separate from the model but uses the model to provide understanding into mechanism of how the model produces predictions. (try to think of a simple example of a model explainer) (mention some of the model explainers that have been developed recently)
+As an example, suppose that forensics examiners are trying to determine if a bullet used in a crime was fired from the gun that belongs to a suspect in the investigaion. A random forest model could be used to produce a probability of the bullet being fired from the gun under question. Even if the model may return a high probability of a match, it may be difficult for a jury to trust the results from the model when deciding whether to convict the suspect without the forensics examiners having the ability to explain which factors in the model led to this high probability.
+
+The European Union has taken the desire to provide explanations from machine learning models a step further. In May 2018, the General Data Protection Regulation (GDPR) went into effect (https://eugdpr.org/the-regulation/gdpr-faqs/). Part of the policies enforced by the regulation include the right for subjects affected by decisions made via automated algorithms to understand the logic behind the decisions being made. As Goodman and Flaxman (2016) point out, this regulation will have a great effect on the way that machine learning algorithms are used to make decisions. While there are different ways to interpret the ability to understand the logic behind the decisions, they claim a minimum would be to explain how the input variables relate to the predictions.
+
+One approach to remedy the problem of uninterpretable models is to develop a model explainer that can provide insight into the performance of the complex model. A model explainer is a method that is separate from the model but uses the model and output from the model to provide understanding into mechanism of how the model produces predictions. (try to think of a simple example of a model explainer) (mention some of the model explainers that have been developed recently)
 
 LIME (local interpretable model explanations) is one such model explainer (reference). While some model explainers are focused on understanding a model at the global level, LIME was designed to explain the model at the local level for a single prediction of interest. Conceptually, LIME fits a simple interpretable model, referred to as the explainer, that is meant to capture the behavior of the complex "black box model" in a local region around a prediction of interest. (a good place to include an image to help with this explanation)
 
