added yu reference

--- a/papers/Interpreting Random Forest Predictions for Firearm Identification Using LIME/references.bib
+++ b/papers/Interpreting Random Forest Predictions for Firearm Identification Using LIME/references.bib
@@ -544,3 +544,14 @@ pages={99--110}
   publisher = "The National Academies Press",
   address   = "Washington, DC"
 }
+
+@Article{yu:2018,
+   Author="Yu, K. H.  and Beam, A. L.  and Kohane, I. S. ",
+   Title="{{A}rtificial intelligence in healthcare}",
+   Journal="Nat Biomed Eng",
+   Year="2018",
+   Volume="2",
+   Number="10",
+   Pages="719--731",
+   Month="Oct"
+}
