more work on paper

--- a/papers/lime_diagnostics/visual-diagnostics-of-a-model-explainer.Rnw
+++ b/papers/lime_diagnostics/visual-diagnostics-of-a-model-explainer.Rnw
@@ -53,7 +53,7 @@
 
 \section{Introduction}
 
-\hh{In the field of statistics, there are two main uses for models: interpretation and prediction.} \kg{Machine learning models are often used for the latter purpose. While these models have been proven to provide accurate predictions in a wide range of problems, this predictive ability comes at the cost of interpretability.} These models are typically complex and lack a functional form, so the ability to directly interpret the models is lost. \kg{This has earned machine learning models the reputation as being black boxes. The ability to interpret a model helps to diagnose the model and understand the predictions.} In some areas of application, the need to be able to explain the results from a model is critical. \kg{(These last few sentences could use some work so that the ideas are better connected from one sentence to the next.)} As a result, an area of research on how to explain the output from machine learning algorithms has emerged.
+\kg{Added in Heike's suggestions and made a few changes of my own to this paragraph:} In the field of statistics, there are two main uses for models: interpretation and prediction. Machine learning models are often used for the latter purpose. While these models have been proven to provide accurate predictions in a wide range of problems, this predictive ability comes at the cost of interpretability. These models are typically complex and lack a functional form, which makes it not possible to directly interpret the models and has earned them the reputation of being black boxes. The ability to interpret a model helps to diagnose the model and understand the predictions, and in some areas of application, the need to be able to explain the results from a model is critical.
 
 The forensics sciences and the heath care industry are two areas that have benefitted from machine learning but have an obvious need for explainable predictions. For example, \citet{aoas} discuss the use of a random forest model in the forensics sciences to determine whether two bullets were fired from the same gun. \citet{yu:2018} describe how healthcare has advanced through the use of machine learning in ways such as using neural networks to automate medical image diagnoses and implementing Bayesian networks to predict clinical outcomes. In \hh{both} of these cases, the decisions made based on the results of the machine learning models would greatly impact the lives of human beings. If it is not possible to explain the output from a model, it becomes questionable whether to trust the results from the model to make decisions.
 
@@ -61,18 +61,20 @@ As an example, suppose that forensics examiners are trying to determine if a bul
 
 The European Union has taken the desire to provide explanations from machine learning models a step further. In May 2018, the General Data Protection Regulation (GDPR) went into effect (https://eugdpr.org/the-regulation/gdpr-faqs/). The regulation includes a policy that gives the right for subjects affected by decisions made via automated algorithms to understand the logic behind the decisions being made. As Goodman and Flaxman (2016) point out, this regulation will have a great effect on the way that machine learning algorithms are used to make decisions. At minimum, it will require that an explanation of how the input variables relate to the predictions.
 
-One approach to remedy the problem of uninterpretable models is to develop a model explainer that provides insight into the performance of the complex model. A model explainer is a method that is separate from the model but uses the model and output from the model to provide understanding into mechanism of how the model produces predictions. Recently, a handful of model explainers have been developed (reference). LIME (local interpretable model explanations) is one such model explainer (reference).
+\kg{Moved the last sentence from the first paragraph here:} As a result of the desire to be able to explain the predictions, an area of research has emerged on machine learning explain the output from machine learning algorithms. One approach that is being taken to remedy the problem of uninterpretable models is to develop a model explainer that provides insight into the performance of the complex model. A model explainer is a method that is separate from the model but uses the model and output from the model to provide understanding into mechanism of how the model produces predictions. Recently, a handful of model explainers have been developed (reference). LIME (local interpretable model explanations) is one such model explainer (reference).
 
 While some model explainers are focused on understanding a model at the global level, LIME was designed to explain the model at the local level for a single prediction of interest. Conceptually, LIME fits a simple interpretable model, referred to as the explainer, that is meant to capture the behavior of the complex "black box model" in a local region around a prediction of interest. (a good place to include an image to help with this explanation)
 
 The explanation that is produced from the explainer is also a prediction or an element of a model. Since it is not directly extracted from the complex model, it is important to ask the question, ``How reliable is the explanation?". Currently, there are no recommendations for how to assess the explanations from LIME (need to check to make sure this is a true statement). \kg{I'd like to expand on this paragraph since this is really the focus of the paper. Then the last paragraph in the intro can outline the paper.}
+
+\kg{I moved this paragraph here, because I think this is where I was to first introdude this concept, but it need a lot of reworking to fit in with the intro, and I need to finish writing my thoughts.} Predictive models are used in both regression and classification settings. For this paper, we will focus on the classification setting, and in particular, we will only discuss the case with a dichotomous response variable. \hh{Accepted best practice for all}  predictive models is \hh{that during the model fitting process}, the data is divided into training and testing portions. The training data is used to fit the complex model, and the testing data is used to assess the model. \hh{This is done to prevent overfitting and to get a more accurate assessment of the prediction error of the model.} The complex model is then applied to the features in the testing data, and the resulting predictions are compared to ground truth. Of \hh{particular} interest during this assessment are the cases when the model is wrong. In the dichotomous response classification case, there are two ways in which the model can be wrong. The model can make a type I error in which..., or the model can make a type II error in which...
 
 In this paper, we will present some visualizations tools to assess the explanations from LIME in classification problems. Additionally, we will show an example using these tools on explanations from a forensics bullet matching dataset, and we will discuss how the results from the example provide some possible insights into the workings of LIME.
 \hh{still to come: outline of the remainder of the paper.}
 
 \section{Background}
 
-Predictive models are used in both regression and classification settings. For this paper, we will focus on the classification setting, and in particular, we will only discuss the case with a dichotomous response variable. \hh{Accepted best practice for all}  predictive models is \hh{that during the model fitting process}, the data is divided into training and testing portions. The training data is used to fit the complex model, and the testing data is used to assess the model. \hh{This is done to prevent overfitting and to get a more accurate assessment of the prediction error of the model.} The complex model is then applied to the features in the testing data, and the resulting predictions are compared to ground truth. Of \hh{particular} interest during this assessment are the cases when the model is wrong. In the dichotomous response classification case, there are two ways in which the model can be wrong. The model can make a type I error in which..., or the model can make a type II error in which...
+\subsection{Model Explainers}
 
 \subsection{Overview of LIME}
 
@@ -122,6 +124,10 @@ The methods of equally spaced bins and quantile bins also allow the user to spec
 \subsection{etc...}
 
 \section{Application}
+
+\subsection{Iris Data (?)}
+
+\subsection{Bullet Matching Data}
 
 1. explainer model generally has very low $R^2$ (probably due to binning)
 2. "local" explanations are not local but are driven by the ("global") marginal distributions of covariates
